--- a/Udacity_Generative_AI/Generative_AI_Fundamentals/trained_lora_bert-base-uncased_glue_mrpc/adapter_config.json
+++ b/Udacity_Generative_AI/Generative_AI_Fundamentals/trained_lora_bert-base-uncased_glue_mrpc/adapter_config.json
@@ -1,7 +1,7 @@
 {
   "alpha_pattern": {},
   "auto_mapping": null,
-  "base_model_name_or_path": "Intel/bert-base-uncased-mrpc",
+  "base_model_name_or_path": "bert-base-uncased",
   "bias": "none",
   "fan_in_fan_out": false,
   "inference_mode": true,
@@ -19,8 +19,8 @@
   "rank_pattern": {},
   "revision": null,
   "target_modules": [
-    "value",
-    "query"
+    "query",
+    "value"
   ],
   "task_type": "SEQ_CLS"
 }
